Documentation edits made through Mintlify web editor

--- a/app-builder/builder/payment.mdx
+++ b/app-builder/builder/payment.mdx
@@ -18,7 +18,7 @@ Cách 1: Nhấn vào nút "Gói ứng dụng" phía bên trên thanh điều hư
   />
 </Frame>
 
-- Cách 2: Nhấn vào nút ![][image380], sau đó chọn "**Gói thành viên**"
+- Cách 2: Nhấn vào nút <Icon icon="grid-2" color="#cfcfcf" size={15} /> , sau đó chọn "**Gói thành viên**"
 
 <Frame caption="Nút danh mục chức năng ">
   <img
@@ -74,7 +74,7 @@ Cách 1: Nhấn vào nút "Gói ứng dụng" phía bên trên thanh điều hư
   - Nhập tên doanh nghiệp: Người dùng nhập tên doanh nghiệp của mình
   - Tên doanh nghiệp rút gọn: Người dùng nhập tên rút gọn của doanh nghiệp
   - Địa chỉ website (nếu có): Người dùng nhập địa chỉ website của doanh nghiệp nếu có
-  - - Mô tả doanh nghiệp: Người dùng nhập 1 đoạn mô tả ngắn về doanh nghiệp
+    - Mô tả doanh nghiệp: Người dùng nhập 1 đoạn mô tả ngắn về doanh nghiệp
 - Cuối cùng, người dùng nhấn nút "Tiếp tục" để chuyển sang bước tiếp theo, hoặc nhấn nút "Quay lại" để quay lại bước phía trước.
 
 <Frame caption="Màn hình điền thông tin liên hệ ">
