--- a/app-builder/builder/support.mdx
+++ b/app-builder/builder/support.mdx
@@ -3,10 +3,11 @@ title: "Kênh hỗ trợ"
 description: "Description of your new file."
 icon: "comments-question"
 ---
-## **8.1. Kênh hỗ trợ** 
 
-* Bước 1: Người dùng nhấn vào biểu tượng ![][image388] ở góc dưới bên trái  
-* Bước 2: Người dùng chọn "Chat nhanh" để chat trực tiếp tại đây hoặc "Chat bằng Zalo" để mở nền tảng Zalo
+## **8.1. Kênh hỗ trợ**
+
+- Bước 1: Người dùng nhấn vào biểu tượng **Zalo** ở góc dưới bên trái
+- Bước 2: Người dùng chọn "Chat nhanh" để chat trực tiếp tại đây hoặc "Chat bằng Zalo" để mở nền tảng Zalo
 
 <Frame caption=" ">
   <img
