--- a/app-builder/builder/demo-app.mdx
+++ b/app-builder/builder/demo-app.mdx
@@ -8,7 +8,7 @@ icon: "qrcode"
 *Cách 1: Xem Demo App từ trang **App của tôi***
 
 * Bước 1: Người dùng di chuyển con trỏ chuột đến thiết kế muốn chọn  
-* Bước 2: Người dùng nhấn nút ![][image374]và quét mã QR hiện lên để xem Demo
+* Bước 2: Người dùng nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} /> và quét mã QR hiện lên để xem Demo
 
 <Frame caption="Nút xem Demo \ Trang App của tôi ">
   <img
