--- a/app-builder/builder/components/flashsale.mdx
+++ b/app-builder/builder/components/flashsale.mdx
@@ -4,148 +4,201 @@ description: "Description of your new file."
 icon: "circle-user"
 ---
 
-## **6.3. FlashSale**
+### **4.2.7. FlashSale**
 
-**Bố cục**  
-Người dùng có thể lựa chọn các bố cục hiển thị danh mục, bao gồm: Đơn giản, Danh sách, Cá tính.
+**Dữ liệu**
 
-<Frame caption="Bố cục Flashsale">
+- **Thêm dữ liệu mới:**
+  - **Bước 1:** Người dùng nhấn vào nút "Thêm dữ liệu mới"
+
+<Frame caption="Nút thêm dữ liệu mới  ">
   <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image79_46cff84d22.png"
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image145_2567539437.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius: "0.5rem" }}
+    style={{ borderRadius:"0.5rem" }}
     title=""
   />
 </Frame>
 
-**Chương trình áp dụng**
+- **Bước 2:** Người dùng nhấn "**Tải ảnh lên hoặc chọn ảnh từ thư viện**" và nhập tiêu đề flashsale
 
-**Thêm dữ liệu mới**
-
-- **Bước 1**: Người dùng nhấn vào nút "Thêm dữ liệu mới"
-
-<Frame caption="Nút thêm dữ liệu">
+<Frame caption="Thêm dữ liệu ">
   <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image30_6567c89508.png"
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image155_f5334e8e57.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius: "0.5rem" }}
+    style={{ borderRadius:"0.5rem" }}
     title=""
   />
 </Frame>
 
-- **Bước 2:**
-  - Người dùng nhập tên chương trình
-  - Người dùng nhấn "Tải ảnh lên hoặc chọn ảnh từ thư viện" cho banner
-  - Chọn chương trình sử dụng
-
-<Frame caption="Thêm dữ liệu Flashsale">
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image194_63f0013b9a.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius: "0.5rem" }}
-    title=""
-  />
-</Frame>
-
-- **Bước 3**: Người dùng nhấn "Thêm dữ liệu" để tiến hành thêm ảnh cho hoặc nhấn "Hủy bỏ" để hủy quá trình thêm dữ liệu
-
-**Chỉnh sửa:**
-- **Bước 1:** Người dùng nhấn vào nút <Icon icon="pencil" color="#cfcfcf" size={15} />
- để đến trang chỉnh sửa
+- **Bước 3:** Người dùng nhấn "**Thêm dữ liệu**" để tiến hành thêm tiêu đề và hình ảnh cho flashsale hoặc nhấn "Hủy bỏ" để hủy quá trình thêm dữ liệu
+- **Chỉnh sửa:**
+  - **Bước 1:** Người dùng nhấn vào nút <Icon icon="pencil" color="#cfcfcf" size={15} /> để đến trang chỉnh sửa
 
 <Frame caption="Nút chỉnh sửa">
   <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image22_4538fa35d5.png"
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image111_d570a45bee.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius: "0.5rem" }}
+    style={{ borderRadius:"0.5rem" }}
     title=""
   />
 </Frame>
 
-- **Bước 2:** Người dùng nhập tên chương trình, nhấn "Tải ảnh lên hoặc chọn ảnh từ thư viện" và chọn chương trình áp dụng
+- **Bước 2:** Người dùng nhấn "**Tải ảnh lên hoặc chọn ảnh từ thư viện**” và nhập tiêu đề flashsale
 
-<Frame caption="Trang chỉnh sửa dữ liệu">
+<Frame caption="Chỉnh sửa dữ liệu">
   <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image119_37596fa0f5.png"
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image178_35cf75f28c.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius: "0.5rem" }}
+    style={{ borderRadius:"0.5rem" }}
     title=""
   />
 </Frame>
 
-- **Bước 3**: Người dùng nhấn "Lưu chỉnh sửa" để tiến hành chỉnh sửa ảnh hoặc nhấn "Hủy bỏ" để hủy quá trình chỉnh sửa dữ liệu
+- **Bước 3:** Người dùng nhấn "**Lưu chỉnh sửa**" để tiến hành chỉnh sửa sản phẩm flashsale hoặc nhấn "Hủy bỏ" để hủy quá trình chỉnh sửa dữ liệu
+- **Xóa:**
+  - **Bước 1:** Người dùng nhấn vào nút <Icon icon="minus" color="#cfcfcf" size={15} /> để xóa dữ liệu
 
-**Xóa:**
-- **Bước 1:** Người dùng nhấn vào nút <Icon icon="minus" color="#cfcfcf" size={15} /> để xóa dữ liệu
-
-<Frame caption="Nút xóa">
+<Frame caption="Nút xóa dữ liệu">
   <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image199_72108dc338.png"
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image112_cd35ffc2fb.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius: "0.5rem" }}
+    style={{ borderRadius:"0.5rem" }}
     title=""
   />
 </Frame>
 
-- **Bước 2:** Tại hộp thông báo hiện lên, người dùng nhấn "Xóa ngay" để tiến hành xóa hoặc nhấn "Hủy" để hủy quá trình xóa dữ liệu
 
-**Tiêu đề**
+    
+  - **Bước 2:** Tại hộp thông báo hiện lên, người dùng nhấn **Xóa ngay** để tiến hành xóa sản phẩm khỏi flashsale hoặc nhấn **Hủy** để hủy quá trình xóa dữ liệu
 
-**Nền**
-- Chọn màu nền cho tiêu đề flashsale bằng cách nhấn ô vuông ![][image67] sau đó chọn màu
-  - Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
-  - Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image104_1ba4757e62.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+
+
+**Tổng quan**
+
 - **Hiển thị tiêu đề:**
-  - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có tiêu đề và không có tiêu đề, ngoài ra người dùng có thể nhập tiêu đề cho phần tử danh mục. Ví dụ, nếu tiêu đề là "F⚡ash Sale" thì phần tử danh mục sẽ như thế này
+  - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có tiêu đề và không có tiêu đề, ngoài ra người dùng có thể nhập tiêu đề cho phần sản phẩm. Ví dụ, nếu tiêu đề là "FLASH SALE TRONG NGÀY" thì phần flashsale sẽ như thế này
 
-<Frame caption="Tiêu đề Flashsale">
+<Frame caption="Tiêu đề sản phẩm">
   <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image95_4af11967a4.png"
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image158_131887ac4e.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius: "0.5rem" }}
+    style={{ borderRadius:"0.5rem" }}
     title=""
   />
 </Frame>
 
-- **Kích thước/ Màu sắc:**
-  - Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của flashsale tại ![][image82]
+  - **Kích thước/ Màu sắc:**
+    - Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của phần sản phẩm tại ![][image153]
+- **Hiển thị phụ đề:**
+  - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có phụ đề và không có phụ đề, ngoài ra người dùng có thể nhập phụ đề cho phần sản phẩm. Ví dụ, nếu phụ đề là "Xem tất cả" thì phần sản phẩm sẽ như thế này
+
+<Frame caption="Phụ đề sản phầm">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image98_b161364914.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+  - **Kích thước /Màu sắc:**
+    - Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của phần sản phẩm tại ![][image268]
 
 **Bộ đếm giờ**
 
-**Hiển thị bộ đếm giờ:**
-- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có bộ đếm giờ và không có bộ đếm giờ
-  - **Nền:**
-    - Người dùng có thể điều chỉnh màu sắc cho nền bộ đếm giờ của flashsale tại ![][image373]
+- **Hiển thị bộ đếm giờ:** Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có bộ đếm giờ và không có bộ đếm giờ.
+- **Nền:** Chọn màu nền cho bộ đếm giờ bằng cách nhấn ô vuông ![][image278] sau đó chọn màu
+- **Bo góc:** Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của bộ đếm giờ tại ô nhập ![][image281] hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút ![][image282]
+- **Viền:**
+  - Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của bộ đếm giờ tại ô nhập ![][image283]
+  - Chọn màu cho viền bằng cách nhấn ô vuông ![][image284] sau đó chọn màu
+  - Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+  - Xóa viền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+- **Đổ bóng:**
+  - Người dùng có thể chọn độ lớn đổ bóng của bộ đếm giờ tại ô ![][image335]
+  - Chọn màu cho đổ bóng bằng cách nhấn ô vuông ![][image288] sau đó chọn màu
+  - Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+  - Xóa đổ bóng bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+- **Kích thước/ Màu sắc (Thời gian):** Người dùng có thể điều chỉnh kích thước và màu sắc cho thời gian flashsale tại ![][image337]
+- **Kích thước/ Màu sắc (Ngày, giờ, phút, giây):** Người dùng có thể điều chỉnh kích thước và màu sắc cho ngày, giờ, phút, giây của flashsale tại ![][image337]
+- **Hiển thị tiêu đề:** Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có tiêu đề và không có tiêu đề, ngoài ra người dùng có thể nhập tiêu đề cho flashsale. Ví dụ, nếu tiêu đề là "Ưu đãi chỉ còn" thì phần flashsale sẽ như thế này
+
+<Frame caption="Tiêu đề Flashsale">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image205_f1a2e691d8.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
   - **Kích thước/ Màu sắc:**
-    - Người dùng có thể điều chỉnh kích thước và màu sắc cho bộ đếm giờ của flashsale tại ![][image82]
+    - Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của phần flashsale tại ![][image184]
+- **Link phụ đề khi nhấn:** Người dùng có thể chọn liên kết để khi click vào phụ đề, ứng dụng sẽ chuyển hướng đến liên kết đó tại ![][image339]
 
-**Thẻ sản phẩm**
+**Danh sách thẻ**
+
 - **Lề ngoài**
-  - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa các thẻ sản phẩm với phần danh sách sản phẩm bằng nút ![][image133] tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image134]
-  - Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa các thẻ sản phẩm với phần danh sách sản phẩm bằng nút ![][image135] tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image136]
+  - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa danh sách sản phẩm với các phần tử khác của phần sản phẩm bằng nút ![][image270] tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image271]
+  - Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa danh sách sản phẩm với các phần tử khác của phần sản phẩm bằng nút ![][image272] tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image273]
 - **Lề trong**
-  - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa các thẻ sản phẩm với các thành phần bên trong thẻ bằng nút ![][image137] tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image138]
-  - Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa các thẻ sản phẩm với các thành phần bên trong thẻ bằng nút ![][image139] tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image140]
-- **Kích thước**
-  - Người dùng có thể chọn hoặc tăng/giảm kích thước của các thẻ sản phẩm tại ![][image331]
-
-**Kiểu hình ảnh**  
-Người dùng có thể chọn kiểu hình ảnh các thẻ sản phẩm tại ![][image107]
-
-**Nền**
-- Chọn màu nền cho thẻ sản phẩm bằng cách nhấn ô vuông ![][image120] sau đó chọn màu
+  - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa danh sách sản phẩm với các hình ảnh sản phầm bên trong bằng nút ![][image274] tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image275]
+  - Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa danh sách sản phẩm với các hình ảnh sản phầm bên trong bằng nút ![][image276] tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image277]
+- **Nền**
+  - Chọn màu nền cho phần danh sách sản phẩm bằng cách nhấn ô vuông ![][image278] sau đó chọn màu
   - Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
   - Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
 - **Bo góc**
-  - Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của thẻ sản phẩm tại ô nhập ![][image141] hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút ![][image142]
+  - Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của phần danh sách sản phẩm tại ô nhập ![][image281] hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút ![][image282]
 - **Viền**
-  - Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của thẻ sản phẩm tại ô nhập ![][image143]
-  - Chọn màu cho viền bằng cách nhấn ô vuông ![][image144] sau đó chọn màu
-  - Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút ![][image145]
-  - Xóa viền bằng cách nhấn nút ![][image146]
+  - Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của phần danh sách sản phẩm tại ô nhập ![][image283]
+  - Chọn màu cho viền bằng cách nhấn ô vuông ![][image284] sau đó chọn màu
+  - Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+  - Xóa viền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
 - **Đổ bóng**
-  - Người dùng có thể chọn độ lớn đổ bóng của thẻ sản phẩm tại ô ![][image147]
-  - Chọn màu cho đổ bóng bằng cách nhấn ô vuông ![][image148] sau đó chọn màu
+  - Người dùng có thể chọn độ lớn đổ bóng của phần danh sách sản phẩm tại ô ![][image287]
+  - Chọn màu cho đổ bóng bằng cách nhấn ô vuông ![][image288] sau đó chọn màu
+  - Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+  - Xóa đổ bóng bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+- **Khoảng cách giữa phần tử** Người dùng có thể nhập hoặc tăng/giảm khoảng cách của phần danh sách sản phẩm tại ô nhập ![][image340]
+
+**Thẻ sản phẩm**
+
+- **Lề ngoài**
+  - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa các thẻ sản phẩm với phần danh sách sản phẩm bằng nút ![][image128] tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image129]
+  - Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa các thẻ sản phẩm với phần danh sách sản phẩm bằng nút ![][image130] tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image131]
+- **Lề trong**
+  - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa các thẻ sản phẩm với các thành phần bên trong thẻ bằng nút ![][image132] tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image133]
+  - Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa các thẻ sản phẩm với các thành phần bên trong thẻ bằng nút ![][image134] tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image135]
+- **Kích thước** Người dùng có thể chọn hoặc tăng/giảm kích thước của các thẻ sản phẩm tại ![][image136]
+
+**Kiểu hình ảnh** Người dùng có thể chọn kiểu hình ảnh các thẻ sản phẩm tại ![][image107]
+
+**Nền**
+
+- Chọn màu nền cho thẻ sản phẩm bằng cách nhấn ô vuông ![][image137] sau đó chọn màu
+  - Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+  - Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+- **Bo góc**
+  - Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của thẻ sản phẩm tại ô nhập ![][image140] hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút ![][image141]
+- **Viền**
+  - Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của thẻ sản phẩm tại ô nhập ![][image142]
+  - Chọn màu cho viền bằng cách nhấn ô vuông ![][image143] sau đó chọn màu
+  - Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+  - Xóa viền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+- **Đổ bóng**
+  - Người dùng có thể chọn độ lớn đổ bóng của thẻ sản phẩm tại ô ![][image146]
+  - Chọn màu cho đổ bóng bằng cách nhấn ô vuông ![][image147] sau đó chọn màu
   - Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
   - Xóa đổ bóng bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
 - **Hiển thị tên sản phẩm:**
@@ -171,5 +224,6 @@ Người dùng có thể chọn kiểu hình ảnh các thẻ sản phẩm tại
 - **Hiển thị nút giỏ hàng:**
   - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có nút thêm vào giỏ hàng và không có nút thêm vào giỏ hàng
 
-**Kiểu nút giỏ hàng**  
-Người dùng có thể chọn chuyển đổi hiển thị giỏ hàng giữa icon hoặc button ![][image118]
+**Kiểu nút giỏ hàng:** Người dùng có thể chọn chuyển đổi hiển thị giỏ hàng giữa icon hoặc button ![][image118]
+
+---
