Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: "AppMinis - Giới thiệu chung"
 description: "AppMinis là nền tảng thiết kế Mini App và Mobile App tự động, giúp các cá nhân và doanh nghiệp tạo ứng dụng nhanh chóng chỉ trong vài phút mà không cần biết lập trình."
+icon: "house"
 ---
 
 ## **Giới thiệu chung**
