Documentation edits made through Mintlify web editor

--- a/app-builder/builder/components/banners.mdx
+++ b/app-builder/builder/components/banners.mdx
@@ -19,7 +19,7 @@ icon: "circle-user"
   />
 </Frame>
 
-- **Bước 2:** Người dùng nhấn \*\*"\*\*Tải ảnh lên hoặc chọn ảnh từ thư viện" và chọn đường dẫn đến trang (người dùng sẽ được điều hướng đến trang nào khi nhấn vào ảnh này trên banner)
+- **Bước 2:** Người dùng nhấn **"Tải ảnh lên hoặc chọn ảnh từ thư viện**" và chọn đường dẫn đến trang (người dùng sẽ được điều hướng đến trang nào khi nhấn vào ảnh này trên banner)
 
 <Frame caption="Thêm dữ liệu  ">
   <img
@@ -30,7 +30,7 @@ icon: "circle-user"
   />
 </Frame>
 
-- **Bước 3:** Người dùng nhấn "Thêm dữ liệu" để tiến hành thêm ảnh cho banner hoặc nhấn "Hủy bỏ" để hủy quá trình thêm dữ liệu
+- **Bước 3:** Người dùng nhấn "**Thêm dữ liệu**" để tiến hành thêm ảnh cho banner hoặc nhấn "Hủy bỏ" để hủy quá trình thêm dữ liệu
 - **Chỉnh sửa:**
   - **Bước 1:** Người dùng nhấn vào nút <Icon icon="pencil" color="#cfcfcf" size={15} /> để đến trang chỉnh sửa
 
@@ -54,7 +54,7 @@ icon: "circle-user"
   />
 </Frame>
 
-- **Bước 3:** Người dùng nhấn \*\*"\*\*Lưu chỉnh sửa" để tiến hành chỉnh sửa ảnh cho banner hoặc nhấn "Hủy bỏ" để hủy quá trình chỉnh sửa dữ liệu
+- **Bước 3:** Người dùng nhấn "**Lưu chỉnh sửa**" để tiến hành chỉnh sửa ảnh cho banner hoặc nhấn "Hủy bỏ" để hủy quá trình chỉnh sửa dữ liệu
 - **Xóa:**
   - **Bước 1:** Người dùng nhấn vào nút <Icon icon="minus" color="#cfcfcf" size={15} /> để xóa dữ liệu
 
