--- a/app-builder/builder/components/headers.mdx
+++ b/app-builder/builder/components/headers.mdx
@@ -26,7 +26,7 @@ icon: "circle-user"
   />
 </Frame>
 
-- **Hiển thị icon thông báo:** Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có icon thông báo và không có icon thông báo\
+- **Hiển thị icon thông báo:** Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có icon thông báo và không có icon thông báo
 - **Trang tìm kiếm:** Người dùng thể chọn phạm vi tìm kiếm như **Sản phẩm** hoặc **Dịch vụ** trong phần tùy chọn.
 
 <Frame caption="Điều chỉnh tùy chọn trang tìm kiếm  ">
