--- a/app-builder/builder/components/support.mdx
+++ b/app-builder/builder/components/support.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Support'
-description: 'Description of your new file.'
+title: "Support"
+description: "Description of your new file."
 icon: "circle-user"
 ---
 
@@ -8,7 +8,7 @@ icon: "circle-user"
 
 - **Dữ liệu**
 - **Thêm dữ liệu mới:**
-- **Bước 1:** Người dùng nhấn vào nút "Thêm dữ liệu mới"
+- **Bước 1:** Người dùng nhấn vào nút "**Thêm dữ liệu mới**"
 
 <Frame caption="Nút thêm dữ liệu mới ">
   <img
@@ -30,8 +30,7 @@ icon: "circle-user"
   />
 </Frame>
 
-- **Bước 3:** Người dùng nhấn "Thêm dữ liệu" để tiến hành thêm ảnh hoặc nhấn "Hủy bỏ" để hủy quá trình thêm dữ liệu
-
+- **Bước 3:** Người dùng nhấn "Thêm dữ liệu" để tiến hành thêm ảnh hoặc nhấn "**Hủy bỏ**" để hủy quá trình thêm dữ liệu
 - **Chỉnh sửa:**
   - **Bước 1:** Người dùng nhấn vào nút <Icon icon="pencil" color="#cfcfcf" size={15} /> để đến trang chỉnh sửa
 
@@ -44,7 +43,7 @@ icon: "circle-user"
   />
 </Frame>
 
-  - **Bước 2**: Người dùng thay đổi tên, nhấn "Tải ảnh lên hoặc chọn ảnh từ thư viện” và sửa đường dẫn đến trang (người dùng sẽ được điều hướng đến trang nào khi nhấn vào ảnh này)
+- **Bước 2**: Người dùng thay đổi tên, nhấn "**Tải ảnh lên hoặc chọn ảnh từ thư viện**” và sửa đường dẫn đến trang (người dùng sẽ được điều hướng đến trang nào khi nhấn vào ảnh này)
 
 <Frame caption="Chỉnh sửa dữ liệu   ">
   <img
@@ -55,8 +54,7 @@ icon: "circle-user"
   />
 </Frame>
 
-  - **Bước 3:** Người dùng nhấn **"**Lưu chỉnh sửa**" để tiến hành chỉnh sửa ảnh hoặc nhấn "Hủy bỏ" để hủy quá trình chỉnh sửa dữ liệu
-
+- **Bước 3:** Người dùng nhấn "**Lưu chỉnh sửa**" để tiến hành chỉnh sửa ảnh hoặc nhấn "**Hủy bỏ**" để hủy quá trình chỉnh sửa dữ liệu
 - **Xóa:**
   - **Bước 1:** Người dùng nhấn vào nút <Icon icon="minus" color="#cfcfcf" size={15} /> để xóa dữ liệu
 
@@ -69,7 +67,7 @@ icon: "circle-user"
   />
 </Frame>
 
-  - **Bước 2:** Tại hộp thông báo hiện lên, người dùng nhấn **Xóa ngay** để tiến hành xóa hoặc nhấn **Hủy** để hủy quá trình xóa dữ liệu
+- **Bước 2:** Tại hộp thông báo hiện lên, người dùng nhấn **Xóa ngay** để tiến hành xóa hoặc nhấn **Hủy** để hủy quá trình xóa dữ liệu
 
 <Frame caption=" ">
   <img
