Documentation edits made through Mintlify web editor

--- a/app-builder/builder/pages/minigame-page.mdx
+++ b/app-builder/builder/pages/minigame-page.mdx
@@ -10,7 +10,7 @@ icon: "circle-user"
 
 **Thêm phần thưởng mới**
 
-- **Bước 1**: Người dùng nhấn vào nút "Thêm phần thưởng mới"
+- **Bước 1**: Người dùng nhấn vào nút "**Thêm phần thưởng mới**"
 
 <Frame caption="Nút thêm mới  ">
   <img
@@ -23,7 +23,7 @@ icon: "circle-user"
 
 - **Bước 2:**
   - Người dùng nhập Tên tiêu đề
-  - Người dùng nhấn "Tải ảnh lên hoặc chọn ảnh từ thư viện"
+  - Người dùng nhấn "**Tải ảnh lên hoặc chọn ảnh từ thư viện**"
 
 <Frame caption="Thêm dữ liệu   ">
   <img
@@ -34,7 +34,7 @@ icon: "circle-user"
   />
 </Frame>
 
-- **Bước 3**: Người dùng nhấn "Thêm dữ liệu" để tiến hành thêm mới hoặc nhấn "Hủy bỏ" để hủy quá trình thêm dữ liệu
+- **Bước 3**: Người dùng nhấn "**Thêm dữ liệu**" để tiến hành thêm mới hoặc nhấn "Hủy bỏ" để hủy quá trình thêm dữ liệu
 - **Chỉnh sửa:**
   - **Bước 1:** Người dùng nhấn vào nút <Icon icon="pencil" color="#cfcfcf" size={15} /> để đến trang chỉnh sửa
 
@@ -58,7 +58,7 @@ icon: "circle-user"
   />
 </Frame>
 
-- **Bước 3**: Người dùng nhấn "Lưu chỉnh sửa" để tiến hành chỉnh sửa hoặc nhấn "Hủy bỏ" để hủy quá trình chỉnh sửa dữ liệu
+- **Bước 3**: Người dùng nhấn "**Lưu chỉnh sửa**" để tiến hành chỉnh sửa hoặc nhấn "**Hủy bỏ**" để hủy quá trình chỉnh sửa dữ liệu
 - **Xóa:**
   - **Bước 1:** Người dùng nhấn vào nút <Icon icon="minus" color="#cfcfcf" size={15} /> để xóa dữ liệu
 
@@ -71,7 +71,7 @@ icon: "circle-user"
   />
 </Frame>
 
-- **Bước 2:** Tại hộp thông báo hiện lên, người dùng nhấn 'Xóa ngay" để tiến hành xóa hoặc nhấn "Hủy" để hủy quá trình xóa dữ liệu
+- **Bước 2:** Tại hộp thông báo hiện lên, người dùng nhấn "**Xóa ngay**" để tiến hành xóa hoặc nhấn "Hủy" để hủy quá trình xóa dữ liệu
 
 **Tiêu đề**
 
@@ -116,7 +116,6 @@ Chọn màu nền cho phần thưởng 1 bằng cách nhấn ô vuông ![][image
 
 - Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
   - Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
-
 
 **Màu viền vòng quay**
 
