Documentation edits made through Mintlify web editor

--- a/app-builder/builder/design-app/drag-drop-component.mdx
+++ b/app-builder/builder/design-app/drag-drop-component.mdx
@@ -30,7 +30,7 @@ Người dùng nhấn giữ biểu tượng <Icon icon="grid" color="#cfcfcf" si
 
 - Bật/tắt hoặc xóa phần tử
 
-a. Bật/ tắt hiển thị phần tử trên trang
+### **a. Bật/Tắt hiển thị phần tử trên trang**
 
 Người dùng có thể nhấn vào nút <Icon icon="eye" color="#cfcfcf" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái hiển thị và không hiển thị các phần tử.
 
@@ -42,18 +42,31 @@ Người dùng có thể nhấn vào nút <Icon icon="eye" color="#cfcfcf" size=
   />
 </Frame>
 
-b. Xóa phần tử trên trang
+### **b. Xóa phần tử trên trang**
 
-- **Bước 1**: Người dùng nhấn vào nút <Icon icon="minus" color="#cfcfcf" size={15} />
+<Steps>
+  <Step title="Nhấn vào nút xóa phần tử">
+    Người dùng nhấn vào nút <Icon icon="minus" color="#cfcfcf" size={15} /> để xóa phần tử khỏi trang.
 
-<Frame caption="Nút xóa phần tử">
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image140_2830b31ad0.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
-    title=""
-  />
-</Frame>
+    <Frame caption="Nút xóa phần tử">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image140_2830b31ad0.png"
+        alt="Nút xóa phần tử trong giao diện chỉnh sửa"
+        style={{ borderRadius:"0.5rem" }}
+        title="Nút xóa phần tử"
+      />
+    </Frame>
+  </Step>
+  <Step title="Xác nhận thao tác xóa">
+    Người dùng chọn "**Xóa ngay"** để xóa phần tử, hoặc chọn "**Hủy"** nếu không muốn xóa.
 
-- **Bước 2**: Người dùng nhấn nút "**Xóa ngay**" để xóa phần tử hay nhấn "**Hủy**" để hủy thao tác xóa <Icon icon="minus" color="#cfcfcf" size={15} />
-- Nút xóa ngay và nút hủy
+    <Frame caption="Nút Xóa ngay và Hủy">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image81_04468588f3.png"
+        alt="Nút Xóa ngay và Hủy trong cửa sổ xác nhận"
+        style={{ borderRadius:"0.5rem" }}
+        title="Nút xác nhận xóa"
+      />
+    </Frame>
+  </Step>
+</Steps>
