Documentation edits made through Mintlify web editor

--- a/app-builder/builder/pages/home.mdx
+++ b/app-builder/builder/pages/home.mdx
@@ -6,8 +6,8 @@ icon: "circle-user"
 
 ### **3.3.1. Home**
 
-**Các mẫu Header**  
-Người dùng nhấn nút “Xem thêm” để có thể chọn mẫu Header phù hợp
+**Các mẫu Header**\
+Người dùng nhấn nút “**Xem thêm**” để có thể chọn mẫu Header phù hợp
 
 <Frame caption="Nút xem thêm">
   <img
@@ -21,34 +21,164 @@ Người dùng nhấn nút “Xem thêm” để có thể chọn mẫu Header p
 **Khoảng cách**
 
 - **Lề ngoài**
-  - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới bằng nút ![][image59] tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image60]
-  - Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa bằng nút ![][image61] tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image62]
+  - Người dùng muốn **chỉnh khoảng cách trên – dưới** giữa phần tử và các phần khác trên trang nhấn nút.
+
+<Frame caption="Nút chỉnh khoảng cách trên – dưới">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image234_png_cca9fd3cc8.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Người dùng muốn **chỉnh khoảng cách trái – phải** của phần tử nhấn nút.
+
+<Frame caption="Nút chỉnh khoảng cách trái – phải">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image236_png_92e8515602.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Nếu muốn **chỉnh riêng từng bên trái hoặc phải** ,**chỉnh riêng lề trên hoặc lề dưới**, nhấn nút.
+
+<Frame caption>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image235_png_b3c78e06e7.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
 - **Lề trong**
-  - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới bằng nút ![][image63] tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image64]
-  - Người dùng điều chỉnh khoảng cách giữa lề trái và phải bằng nút ![][image65] tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image66]
+  - Người dùng muốn **chỉnh khoảng cách trên – dưới** giữa nội dung bên trong phần tử và viền của phần tử nhấn nút.
+
+<Frame caption="Nút chỉnh khoảng cách trên – dưới">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image237_png_09add43703.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Người dùng muốn **chỉnh khoảng cách trái – phải** bên trong phần tử nhấn nút.
+
+<Frame caption="Nút chỉnh khoảng cách trái – phải">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image238_png_bbf59909ab.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Nếu muốn **chỉnh riêng từng bên trái hoặc phải** ,**chỉnh riêng lề trên hoặc lề dưới**, nhấn nút.
+
+<Frame caption>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image239_png_450c6efde7.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
 **Phong cách**
+
 - **Nền**
-  - Chọn màu nền cho header bằng cách nhấn ô vuông ![][image67] sau đó chọn màu
-  - Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
-  - Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+  - Chọn màu nền cho header bằng cách nhấn ô vuông sau đó chọn màu
+
+<Frame caption>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image240_png_bfd8c60325.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Bật/tắt có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+- Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
 - **Bo góc**
-  - Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của header tại ô nhập ![][image70] hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút ![][image71]
+  - Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của header tại ô nhập
+
+<Frame caption>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image241_png_062857766a.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút
+
+<Frame caption>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image246_ec162154ef.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
 - **Viền**
-  - Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của header tại ô nhập ![][image72]
-  - Chọn màu cho viền bằng cách nhấn ô vuông ![][image73] sau đó chọn màu
+  - Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của header tại ô nhập
+  
+<Frame caption>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image242_png_ca6d14aa1f.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+  - Chọn màu cho viền bằng cách nhấn ô vuông sau đó chọn màu
+<Frame caption>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image243_png_354238ad7d.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
   - Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
   - Xóa viền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
 - **Đổ bóng**
-  - Người dùng có thể chọn độ lớn đổ bóng của header tại ô ![][image76]
-  - Chọn màu cho đổ bóng bằng cách nhấn ô vuông ![][image77] sau đó chọn màu
-  - Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
-  - Xóa đồ bóng bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+  - Người dùng có thể chọn độ lớn đổ bóng của header tại ô
 
-**Tổng quan**
+<Frame caption>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image244_png_3536016fb9.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Chọn màu cho đổ bóng bằng cách nhấn ô vuông sau đó chọn màu
+
+<Frame caption>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image245_png_018232cd8b.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Nhấn biểu tượng <Icon icon="eye" color="#cfcfcf" size={15} /> để ẩn hoặc hiển thị hiệu ứng bóng.
+- Xóa đồ bóng bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
 
 **Hiển thị tiêu đề:**
-- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có tiêu đề và không có tiêu đề, ngoài ra người dùng có thể nhập tiêu đề cho header. Ví dụ, nếu tiêu đề là "Xin chào" thì sẽ như thế này
+
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt trạng thái có tiêu đề và không có tiêu đề, ngoài ra người dùng có thể nhập tiêu đề cho header. Ví dụ, nếu tiêu đề là "**Xin chào**" thì sẽ như thế này
 
 <Frame caption="Tiêu đề header">
   <img
@@ -60,10 +190,19 @@ Người dùng nhấn nút “Xem thêm” để có thể chọn mẫu Header p
 </Frame>
 
 - **Kích thước/ Màu sắc:**
-  - Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của header tại ![][image82]
+  - Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của header tại
+<Frame caption>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image247_d65c8c9f28.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
 **Hiển thị phụ đề:**
-- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có phụ đề và không có phụ đề, ngoài ra người dùng có thể nhập phụ đề cho header. Ví dụ, nếu tiêu đề là "Ngày mới tốt lành 👋" thì sẽ như thế này
+
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt có phụ đề và không có phụ đề, ngoài ra người dùng có thể nhập phụ đề cho header. Ví dụ, nếu tiêu đề là "**Ngày mới tốt lành 👋**" thì sẽ như thế này
 
 <Frame caption="Phụ đề header">
   <img
@@ -76,24 +215,10 @@ Người dùng nhấn nút “Xem thêm” để có thể chọn mẫu Header p
 
 - **Kích thước/ Màu sắc:**
   - Người dùng có thể điều chỉnh kích thước và màu sắc cho phụ đề của header tại ![][image82]
+- **Hiển thị biểu tượng**
+  - Người dùng gạt nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt tính năng **Logo, Giỏ hàng, Tin nhắn, Tìm kiếm, Thông báo**.
 
-**Hiển thị logo:**
-- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có logo và không có logo
-
-**Hiển thị icon giỏ hàng:**  
-Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có icon giỏ hàng và không có icon giỏ hàng
-
-**Hiển thị icon tin nhắn:**  
-Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có icon tin nhắn và không có icon tin nhắn
-
-**Hiển thị icon tìm kiếm:**  
-Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có icon tìm kiếm và không có icon tìm kiếm
-
-**Hiển thị icon thông báo:**  
-Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có icon thông báo và không có icon thông báo
-
-**Trang tìm kiếm:**
-Người dùng thể chọn phạm vi tìm kiếm như **Sản phẩm** hoặc **Dịch vụ** trong phần tùy chọn.
+**Trang tìm kiếm:** Người dùng thể chọn phạm vi tìm kiếm như **Sản phẩm** hoặc **Dịch vụ** trong phần tùy chọn.
 
 <Frame caption="Điều chỉnh tùy chọn trang tìm kiếm">
   <img
@@ -107,7 +232,8 @@ Người dùng thể chọn phạm vi tìm kiếm như **Sản phẩm** hoặc *
 **Thanh tìm kiếm**
 
 **Hiển thị thanh tìm kiếm:**
-- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có thanh tìm kiếm và không có thanh tìm kiếm, ngoài ra người dùng có thể nhập nội dung tùy chỉnh. Ví dụ, nếu nội dung trùy chỉnh là "Bạn đang cần gì?" thì sẽ như thế này
+
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt có thanh tìm kiếm và không có thanh tìm kiếm, ngoài ra người dùng có thể nhập nội dung tùy chỉnh. Ví dụ, nếu nội dung tùy chỉnh là "**Bạn đang cần gì**?" thì sẽ như thế này
 
 <Frame caption="Thanh tìm kiếm">
   <img
